--- a/CO2Toolkit/CO2Toolkit.csproj
+++ b/CO2Toolkit/CO2Toolkit.csproj
@@ -12,6 +12,7 @@
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <Copyright>Copyright (c) Richard Hegewald 2025</Copyright>
   </PropertyGroup>
 
 
