--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ name: Release
 
 on:
   workflow_dispatch: {}
+  push:
+    tags:
+      - "v*.*.*"
 
 permissions:
   contents: read
@@ -14,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read
+      contents: write
       attestations: write
     steps:
     - name: Harden the runner (Audit all outbound calls)
@@ -39,6 +42,12 @@ jobs:
     - name: Build
       run: dotnet pack CO2Toolkit/CO2Toolkit.sln --configuration Release
 
+    - name: Release
+      uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+        files: CO2Toolkit/bin/Release/*.nupkg
+
     - name: Upload build artifact
       id: upload
       uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
@@ -50,11 +59,11 @@ jobs:
       with:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
     
-#    - name: Publish the package to GPR
-#      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
+    - name: Publish the package to GPR
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
     
-#    - name: Publish the package to nuget.org
-#      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
-#      env:
-#        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
+    - name: Publish the package to nuget.org
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
     
