--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,6 +33,9 @@ jobs:
       with:
         dotnet-version: 8.0.x
         source-url: https://api.nuget.org/v3/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{secrets.NUGET_TOKEN}}
+
         
     - name: Restore dependencies
       run: dotnet restore CO2Toolkit/CO2Toolkit.sln
