ci: try again nuget auth

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         dotnet-version: 8.0.x
         source-url: https://api.nuget.org/v3/index.json
       env:
-        NUGET_AUTH_TOKEN: ${{secrets.NUGET_TOKEN}}
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
 
         
     - name: Restore dependencies
@@ -61,8 +61,6 @@ jobs:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
     
     - name: Publish the package to nuget.org
-      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
 
     
