--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
       id-token: write
       contents: write
       attestations: write
+      packages: write
     steps:
     - name: Harden the runner (Audit all outbound calls)
       uses: step-security/harden-runner@c6295a65d1254861815972266d5933fd6e532bdf # v2.11.1
@@ -32,11 +33,10 @@ jobs:
       uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4.3.1
       with:
         dotnet-version: 8.0.x
-        source-url: https://api.nuget.org/v3/index.json
+        source-url: source-url: https://nuget.pkg.github.com/richilino/index.json
       env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-        
     - name: Restore dependencies
       run: dotnet restore CO2Toolkit/CO2Toolkit.sln
       
@@ -59,8 +59,13 @@ jobs:
     - uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
       with:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
+      
+    - name: Publish the package to GPR
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
     
     - name: Publish the package to nuget.org
-      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
 
     
