ci: disable GPR

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,9 +33,9 @@ jobs:
       uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4.3.1
       with:
         dotnet-version: 8.0.x
-        source-url: https://nuget.pkg.github.com/richilino/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        source-url: https://nuget.pkg.github.com/richilino/index.json
+#      env:
+#        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Restore dependencies
       run: dotnet restore CO2Toolkit/CO2Toolkit.sln
@@ -60,11 +60,11 @@ jobs:
       with:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
       
-    - name: Publish the package to GPR
-      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
+#    - name: Publish the package to GPR
+#      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
     
     - name: Publish the package to nuget.org
-      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
+      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -s https://api.nuget.org/v3/index.json -k $NUGET_AUTH_TOKEN
       env:
         NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
 
