--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+      <add key="defaultPushSource" value="https://api.nuget.org/v3/index.json" />
+  </config>
   <packageSources>
-    <add key="DefaultPushSource" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
 </configuration>
