--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
+      actions: read
       id-token: write
       contents: write
       attestations: write
@@ -33,9 +34,6 @@ jobs:
       uses: actions/setup-dotnet@67a3573c9a986a3f9c594539f4ab511d57bb3ce9 # v4.3.1
       with:
         dotnet-version: 8.0.x
-#        source-url: https://nuget.pkg.github.com/richilino/index.json
-#      env:
-#        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Restore dependencies
       run: dotnet restore CO2Toolkit/CO2Toolkit.sln
@@ -43,11 +41,23 @@ jobs:
     - name: Build
       run: dotnet pack CO2Toolkit/CO2Toolkit.sln --configuration Release
 
-    - name: Release
+    - uses: anchore/sbom-action@f325610c9f50a54015d37c8d16cb3b0e2c8f4de0 # v0.18.0
+      with:
+        path: CO2Toolkit
+        artifact-name: co2-toolkit-net-sbom.spdx
+        upload-artifact: true
+        upload-release-assets: true
+
+    - name: Extract release notes
+      id: extract-release-notes
+      uses: ffurrer2/extract-release-notes@cae32133495112d23e3569ad04fef240ba4e7bc8 # v2.3.0
+
+    - name: Create Release with Latest Changelog
       uses: softprops/action-gh-release@c95fe1489396fe8a9eb87c0abf8aa5b2ef267fda # v2.2.1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: CO2Toolkit/bin/Release/*.nupkg
+        body: ${{ steps.extract-release-notes.outputs.release_notes }}
 
     - name: Upload build artifact
       id: upload
@@ -56,12 +66,10 @@ jobs:
         path: CO2Toolkit/bin/Release/*.nupkg
         name: CO2Toolkit NuGet
 
-    - uses: actions/attest-build-provenance@c074443f1aee8d4aeeae555aebba3282517141b2 # v2.2.3
+    - uses: actions/attest-sbom@115c3be05ff3974bcbd596578934b3f9ce39bf68 # v2.2.0
       with:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
-      
-#    - name: Publish the package to GPR
-#      run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg
+        sbom-path: co2-toolkit-net-sbom.spdx
     
     - name: Publish the package to nuget.org
       run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN --skip-duplicate
