--- a/CO2Toolkit/CO2Toolkit.csproj
+++ b/CO2Toolkit/CO2Toolkit.csproj
@@ -6,7 +6,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Version>0.1.0</Version>
     <Authors>Richard Hegewald</Authors>
-    <PackageTags>CO2; Carbon; Emission</PackageTags>
+    <PackageTags>CO2; Carbon; Emission; Sustainable Web Design Model; SWDM</PackageTags>
     <Description>A simple NuGet package to calculate CO2 emissions during data transfer.</Description>
     <RepositoryUrl>https://github.com/richilino/co2-toolkit-net</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
