ci: rename generated sbom

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,8 @@ jobs:
       with:
         path: CO2Toolkit
         format: 'spdx-json'
-        output-file: co2-toolkit-net-sbom.spdx.json
+        artifact-name: "co2-toolkit-net.spdx.json"
+        output-file: "."
         upload-artifact: true
         upload-release-assets: true
 
@@ -70,7 +71,7 @@ jobs:
     - uses: actions/attest-sbom@115c3be05ff3974bcbd596578934b3f9ce39bf68 # v2.2.0
       with:
         subject-path: 'CO2Toolkit/bin/Release/*.nupkg'
-        sbom-path: 'co2-toolkit-net-sbom.spdx.json'
+        sbom-path: "co2-toolkit-net.spdx.json"
     
     - name: Publish the package to nuget.org
       run: dotnet nuget push CO2Toolkit/bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN --skip-duplicate
