--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         dotnet-version: 8.0.x
         
     - name: Restore dependencies
-      run: dotnet restore CO2Toolkit/CO2Toolkit.sln
+      run: dotnet restore CO2Toolkit/CO2Toolkit.sln --locked-mode
       
     - name: Build
       run: dotnet build CO2Toolkit/CO2Toolkit.sln --no-restore
