--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
         dotnet-version: 8.0.x
 
     - name: Restore dependencies
-      run: dotnet restore CO2Toolkit/CO2Toolkit.sln
+      run: dotnet restore CO2Toolkit/CO2Toolkit.sln --locked-mode
       
     - name: Build
       run: dotnet pack CO2Toolkit/CO2Toolkit.sln --configuration Release
