--- a/CO2Toolkit/CO2Toolkit.csproj
+++ b/CO2Toolkit/CO2Toolkit.csproj
@@ -13,6 +13,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Copyright>Copyright (c) Richard Hegewald 2025</Copyright>
+    <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
   </PropertyGroup>
 
 
