--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,10 @@ jobs:
     - name: Build
       run: dotnet pack CO2Toolkit/CO2Toolkit.sln --configuration Release
 
+    - name: Generate SBOM from deps.json
     - uses: anchore/sbom-action@f325610c9f50a54015d37c8d16cb3b0e2c8f4de0 # v0.18.0
       with:
-        path: CO2Toolkit
+        path: CO2Toolkit/bin/Release/netstandard2.0/CO2Toolkit.deps.json
         format: 'spdx-json'
         artifact-name: "co2-toolkit-net.spdx.json"
         output-file: "${{ github.workspace }}/co2-toolkit-net.spdx.json"
